# logix

./: .gitignore  Engine.hs  LICENSE  Main.hs  Parser.hs  Prop.hs  Prop.md  PropEval.hs  PropParser.hs  README.md  Test.hs  Tokenizer.hs  Unwrap.md  example  logix.cabal
Examples/: id_rule_proving.txt
Logix/: Config.hs  Context.hs  Definition.hs  Eval.hs  Parser.hs  PropContext.hs  PropDefs.hs  PropEval.hs  PropParser.hs  PropTransform.hs  Sim.hs  Simulation.hs  Test.hs  Tokenizer.hs  Transform.hs  Unwrap.hs  Utils.hs
Prop/: Prop.md  PropParser.hs
docs/: Unwrap.md
src/: Main.hs  PropEval.hs  PropParser.hs  Tokenizer.hs
test/: 1.txt
