name:                logix
version:             0.0.1
homepage:            https://github.com/izgzhen/logix
license:             MIT
license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable logix
  main-is:           Main.hs
  other-modules:     Logix.Definition
                     Logix.Eval
                     Logix.Config
                     Logix.Parser
                     Logix.Transform
                     Logix.Context
                     Logix.Tokenizer
                     Logix.Unwrap
                     Logix.Utils
                     Logix.Simulation
  build-depends:
    base >=4.7 && <4.8,
    containers >=0.5 && <0.6,
    haskeline >=0.7 && <0.8,
    mtl >=2.1 && <2.2,
    split,
    regex-posix >=0.95 && <0.96
  default-language:  Haskell2010

executable logixtest
  main-is:           Test.hs
  other-modules:     Logix.Transform
                     Logix.Definition
                     Logix.Simulation
                     Logix.Unwrap
  build-depends:
    base >=4.7 && <4.8,
    containers >=0.5 && <0.6,
    mtl >=2.1 && <2.2,
    split,
    regex-posix >=0.95 && <0.96
  default-language:  Haskell2010